syntax = "proto3";

package cheers.api.v1;

//import "cheers/user.proto";
//import "cheers/ticket.proto";
import "cheers/party.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option go_package = "cheers.com/genproto/cheers/api/v1";

service Main {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateParty (CreatePartyRequest) returns (CreatePartyResponse);
  rpc UpdateParty (UpdatePartyRequest) returns (Party);
  rpc DeleteParty (DeletePartyRequest) returns (google.protobuf.Empty);
}

message DeletePartyRequest {
  string id = 1;
}

message UpdatePartyRequest {
}

message UpdatePartyResponse {
}

message CreatePartyRequest {
}

message CreatePartyResponse {
}

message GetUserRequest {
  oneof identification {
    string user_id = 1;
    string username = 2;
  }
}

message GetUserResponse {
//  cheers.User user = 1;
  int64 post_count = 2;
  bool follow_back = 3;
  int64 following_count = 4;
  int64 followers_count = 5;
  string story_state = 6;
}